public/stylesheets/style.css
body {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 18px;
  color: #333333;
  background: #efefef;
  min-width: 1096px;
}

a {
  color: #00B7FF;
  outline: none;
  border: none;
}

img {
  outline: none;
  border: none;
}

iframe {
  display: none;
}

input[type=text], textarea { 
  border: 1px solid #cccccc;
  border-radius:5px; 
  -webkit-border-radius:5px; 
  -moz-border-radius:5px; 

  padding: 0.4em;
  width:200px; 
  overflow: auto;
} 

input[type=text]:focus, textarea:focus {
  outline:none;

  box-shadow:0 0 3px #666 inset; 
  -webkit-box-shadow:0 0 3px #666 inset; 
  -moz-box-shadow:0 0 3px #666 inset; 
}

input[type=submit], input[type=button], button {
  border: 1px solid #CCC;
  border-color: #222 #222 black;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  border-radius: 2px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;

  margin-bottom: 8px;

  background-color: #aaaaaa;
  background-image: -moz-linear-gradient(top, #aaa, #888);
  background-image: -ms-linear-gradient(top, #aaa, #888);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#aaa), to(#888));
  background-image: -webkit-linear-gradient(top, #aaa, #888);
  background-image: -o-linear-gradient(top, #aaa, #888);
  background-image: linear-gradient(top, #aaa, #888);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#aaaaaa', endColorstr='#888888', GradientType=0);

  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
  color: white;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  display: inline-block;
  padding: 4px 10px 4px;
  font-size: 13px;
  line-height: 18px;
  text-align: center;
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);
  cursor: pointer;
}

input[type=submit]:hover, input[type=button]:hover, button:hover {
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  color: white;
  text-decoration: none;
  background-color: #777777;
  background-position: 0 -15px;
  -webkit-transition: background-position 0.1s linear;
  -moz-transition: background-position 0.1s linear;
  -ms-transition: background-position 0.1s linear;
  -o-transition: background-position 0.1s linear;
  transition: background-position 0.1s linear;
}

/* TAB LIST SECTION */
#tabList {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1200;
  color: #999999;
  padding-left: 1.5em;
  background: -moz-linear-gradient(top, rgba(51, 51, 51, 0.8) 0%, rgba(34, 34, 34, 0.8) 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(51, 51, 51, 0.8)), color-stop(100%,rgba(34, 34, 34, 0.8)));
  background: -webkit-linear-gradient(top, rgba(51, 51, 51, 0.8) 0%,rgba(34, 34, 34, 0.8) 100%);
  background: -o-linear-gradient(top, rgba(51, 51, 51, 0.8) 0%,rgba(34, 34, 34, 0.8) 100%);
  background: -ms-linear-gradient(top, rgba(51, 51, 51, 0.8) 0%,rgba(34, 34, 34, 0.8) 100%);
  background: linear-gradient(top, rgba(51, 51, 51, 0.8) 0%,rgba(34, 34, 34, 0.8) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cc333333', endColorstr='#cc222222', GradientType=0);
  box-shadow: none;
}

#tabList > a {
  text-decoration: none;
  padding: 1em;
  display: block;
  float: left;
  color: #999999;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  line-height: 13px;
}

#tabList > a:hover,
#tabList > a.tabSelected {
  color: #FFFFFF;
}

.tab {
  padding-top: 4em;
}

/* REGISTRY SECTION */
#registryTab {
  margin: 0em 5em;
}

#registryTab a {
  margin-left: 3em;
  display: block;
}

/* GUEST BOOK SECTION */
.commentText {
  position: relative;
  margin: 1em 1em 2em 1em;
  padding: 1em;
  background-color: #ffffff;

  border: 1px solid #cccccc;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  border-radius: 6px;

  width: 70em;
}

.commentText::before {
  content: "";
  top: -11px;
  position: absolute;
  left: 20px;
  margin: 0;

  border-top: 0;
  border-left: 10px solid transparent;
  border-left: 10px solid rgba(255, 255, 255, 0);
  border-right: 10px solid transparent;
  border-right: 10px solid rgba(255, 255, 255, 0);
  border-bottom: 10px solid #cccccc;

  padding: 0;
  width: 0;
  height: 0;
}

.commentText::after {
  content: "";
  position: absolute;
  top: -10px;
  left: 20px;
  margin: 0;

  border-top: 0;
  border-left: 10px solid transparent;
  border-left: 10px solid rgba(255, 255, 255, 0);
  border-right: 10px solid transparent;
  border-right: 10px solid rgba(255, 255, 255, 0);
  border-bottom: 10px solid #ffffff;

  padding: 0;
  width: 0;
  height: 0;
}

#newComment {
  clear: both;
  padding-top: 10em;
}

/* SLIDE SHOW SECTION */
#slideshowTab {
	width:1024px;
	margin:6em auto;
	position:relative;
	z-index:0;
}

#frame {
  position: absolute;
  z-index: 0;
  width: 1325px;
  height: 724px;
  top: -21px;
  left: -145px;
}

/*
	Slideshow
*/

#slides {
	position:absolute;
	top:15px;
	left:4px;
	z-index:100;
}

/*
	Slides container
	Important:
	Set the width of your slides container
	Set to display none, prevents content flash
*/

.slides_container {
	width:1024px;
	overflow:hidden;
  border: 26px solid white;
  top: -26px;
  left: -26px;
  box-shadow: 0px 4px 12px 5px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0px 4px 12px 5px rgba(0, 0, 0, 0.2);
}

/*
	Each slide
	Important:
	Set the width of your slides
	If height not specified height will be set by the slide content
	Set to display block
*/

.slides_container a {
	width:1024px;
	height:576px;
	display:block;
}

.slides_container a img {
	display:block;
}

/*
	Next/prev buttons
*/

#slides .next,#slides .prev {
	position:absolute;
  top: 250px;
  left: -50px;
  width: 24px;
  height: 43px;
	display:block;
	z-index:101;
}

#slides .next {
	left:1050px;
}

/*
	Pagination
*/

.pagination {
	margin:50px auto 0;
	width:200px;
}

.pagination li {
	float:left;
	margin:0 1px;
	list-style:none;
}

.pagination li a {
	display:block;
	width:12px;
	height:0;
	padding-top:12px;
	background-image:url(../images/pagination.png);
	background-position:0 0;
	float:left;
	overflow:hidden;
}

.pagination li.current a {
	background-position:0 -12px;
}

